--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portafolio de Jose</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
-<body>
+<body class="text-2xl font-thin">
+    <header class="site-header py-4 px-0 bg-center bg-cover h-screen">
+        <div class="max-w-screen-xl my-0 mx-auto h-full flex flex-col justify-between">
+            <div class="flex justify-between items-center">
+                <a href="index.html">
+                    <img class="w-44" src="assets/img/logo.png" alt="logotipo">
+                </a>
+
+                <nav class="flex justify-between items-center">
+                    <a href="">Educación</a>
+                    <a href="">Experiencia</a>
+                    <a href="">Portafolio</a>
+                    <a href="">Contacto</a>
+                </nav>
+            </div>
+
+
+            <div class="text-5xl text-white">
+                <h1>Desarrollo de Software</h1>
+                <h2>Ing. Jose A Villalobos</h2>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
