--- a/index.html
+++ b/index.html
@@ -34,6 +34,26 @@
             </div>
         </div>
     </header>
+
+
+    <section class="max-w-screen-xl my-0 mx-auto">
+        <h2 class="text-center leading-loose my-12 mx-0">Portafolio</h2>
+
+        <div class="grid grid-cols-3 grid-rows-1 gap-6">
+            <div class="bg-white grid perfil-card">
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
+                    <img class="w-full h-80" src="assets/img/bienes-raices.png" alt="">
+                </a>
+
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html" class="pt-2 pl-6">
+                    <h3>Bienes Raices | Sitio Web</h3>
+                </a>
+
+                <p class="pt-2 pl-6 pb-2 publish-date">2020</p>
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
