Se terminaron las 3 perfil cards

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
 
 
-            <div class="text-5xl text-white">
+            <div class="text-5xl text-white leading-loose">
                 <h1>Desarrollo de Software</h1>
                 <h2>Ing. Jose A Villalobos</h2>
             </div>
@@ -39,7 +39,7 @@
     <section class="max-w-screen-xl my-0 mx-auto">
         <h2 class="text-center leading-loose my-12 mx-0">Portafolio</h2>
 
-        <div class="grid grid-cols-3 grid-rows-1 gap-6">
+        <div class="grid grid-cols-3 grid-rows-1 gap-6 leading-none">
             <div class="bg-white grid perfil-card">
                 <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
                     <img class="w-full h-80" src="assets/img/bienes-raices.png" alt="">
@@ -51,6 +51,31 @@
 
                 <p class="pt-2 pl-6 pb-2 publish-date">2020</p>
             </div>
+
+            <div class="bg-white grid perfil-card">
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
+                    <img class="w-full h-80" src="assets/img/blog_cafe.png" alt="">
+                </a>
+
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html" class="pt-2 pl-6">
+                    <h3>Blog de Café | Sitio Web Responsivo</h3>
+                </a>
+
+                <p class="pt-2 pl-6 pb-2 publish-date">2020</p>
+            </div>
+
+            <div class="bg-white grid perfil-card">
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
+                    <img class="w-full h-80" src="assets/img/imagen2.png" alt="">
+                </a>
+
+                <a href="https://flamboyant-curran-e05753.netlify.app/index.html" class="pt-2 pl-6">
+                    <h3>Prueba Cometa | App Web</h3>
+                </a>
+
+                <p class="pt-2 pl-6 pb-6 publish-date">2019</p>
+            </div>
+
         </div>
 
     </section>
