Responsividad con media querys css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,16 +11,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="assets/css/media-query.css">
 </head>
+
 <body class="text-2xl font-thin">
     <header class="site-header py-4 px-0 bg-center bg-cover h-screen">
         <div class="max-w-screen-xl my-0 mx-auto h-full flex flex-col justify-between">
-            <div class="flex justify-between items-center">
+            <div class="flex justify-between items-center barra-header">
                 <a href="index.html">
                     <img class="w-44" src="assets/img/logo.png" alt="logotipo">
                 </a>
 
-                <nav class="flex justify-between items-center">
+                <nav class="flex justify-between items-center leading-tight">
                     <a href="">Educación</a>
                     <a href="">Experiencia</a>
                     <a href="">Portafolio</a>
@@ -28,7 +31,7 @@
             </div>
 
 
-            <div class="text-5xl text-white leading-loose">
+            <div class="text-5xl text-white leading-loose titulo-portada">
                 <h1>Desarrollo de Software</h1>
                 <h2>Ing. Jose A Villalobos</h2>
             </div>
@@ -39,7 +42,7 @@
     <section class="max-w-screen-xl my-0 mx-auto">
         <h2 class="text-center leading-loose my-12 mx-0">Portafolio</h2>
 
-        <div class="grid grid-cols-3 grid-rows-1 gap-6 leading-none">
+        <div class="grid grid-cols-3 grid-rows-1 gap-6 leading-none grid-container">
             <div class="bg-white grid perfil-card">
                 <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
                     <img class="w-full h-80" src="assets/img/bienes-raices.png" alt="">
@@ -53,11 +56,11 @@
             </div>
 
             <div class="bg-white grid perfil-card">
-                <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
+                <a href="">
                     <img class="w-full h-80" src="assets/img/blog_cafe.png" alt="">
                 </a>
 
-                <a href="https://flamboyant-curran-e05753.netlify.app/index.html" class="pt-2 pl-6">
+                <a href="" class="pt-2 pl-6">
                     <h3>Blog de Café | Sitio Web Responsivo</h3>
                 </a>
 
@@ -65,11 +68,11 @@
             </div>
 
             <div class="bg-white grid perfil-card">
-                <a href="https://flamboyant-curran-e05753.netlify.app/index.html">
+                <a href="">
                     <img class="w-full h-80" src="assets/img/imagen2.png" alt="">
                 </a>
 
-                <a href="https://flamboyant-curran-e05753.netlify.app/index.html" class="pt-2 pl-6">
+                <a href="" class="pt-2 pl-6">
                     <h3>Prueba Cometa | App Web</h3>
                 </a>
 
@@ -79,6 +82,7 @@
         </div>
 
     </section>
-    
+
 </body>
+
 </html>
