Se cambio la imagen de la Tarjeta de Prueba cometa en Portafolio

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div class="bg-white grid perfil-card">
                 <a href="">
-                    <img class="w-full h-full" src="assets/img/imagen2.png" alt="">
+                    <img class="w-full h-full" src="assets/img/prueba-cometa.png" alt="">
                 </a>
 
                 <a href="" class="justify-self-center self-center sm:justify-self-start sm:self-start sm:pt-2 sm:pl-6">
