Cambio de portada y se inicio el footer

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 
             <div class="text-5xl text-white leading-loose text-center lg:text-left mb-8 ">
-                <h1>Desarrollo de Software</h1>
-                <h2>Ing. Jose A Villalobos</h2>
+                <h1 class="border-b-2 border-white">Jose Arturo Villalobos</h1>
+                <h2>Desarrollo de Sofware</h2>
             </div>
         </div>
     </header>
@@ -81,6 +81,11 @@
         </div>
 
     </section>
+
+
+    <footer class="footer">
+        hola
+    </footer>
 
 </body>
 
