--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -12,6 +12,9 @@
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/media-query.css">
+
+    <script src="assets/scripts/bd-experience.js"></script>
+    <script src="assets/scripts/functions.js"></script>
 </head>
 
 <body class="text-2xl font-thin">
@@ -23,17 +26,18 @@
                 </a>
 
                 <nav class="w-full lg:w-3/4 xl:w-1/2 flex justify-evenly items-center leading-tight">
-                    <a href="">Educación</a>
-                    <a href="">Experiencia</a>
-                    <a href="">Portafolio</a>
-                    <a href="">Contacto</a>
+                    <a href="">About Me</a>
+                    <a href="">Education</a>
+                    <a href="">Experience</a>
+                    <a href="">Portfolio</a>
+                    <a href="">Contact Me</a>
                 </nav>
             </div>
 
 
             <div class="text-5xl text-white leading-loose text-center lg:text-left mb-8 ">
                 <h1 class="border-b-2 border-white">Jose Arturo Villalobos</h1>
-                <h2>Desarrollo de Sofware</h2>
+                <h2>Software Development</h2>
             </div>
         </div>
     </header>
@@ -77,15 +81,31 @@
 
                 <p class="justify-self-center self-center sm:justify-self-start sm:self-end sm:py-2 sm:pl-6 publish-date">2019</p>
             </div>
+        </div>
+    </section>
+
+    <!-- Experience Secction -->
+    <section class="bg-grey">
+        <div class="contenedor">
+            <h2 class="text-center text-white leading-loose my-12 mx-0">Experience</h2>
+
+            <div id="div-exp-btns" class="flex justify-around items-center">
+                <!-- Script -->
+            </div>
 
         </div>
+
+
 
     </section>
 
 
     <footer class="footer">
-        hola
+        Website created by Jose Villalobos
     </footer>
+
+    <script src="assets/scripts/index.js"></script>
+    
 
 </body>
 
